# forge

./: .gitignore  AGENTS.md
.claude/skills/forge-watch/: SKILL.md
crates/forge-attractor/src/: events.rs  runner.rs  runtime.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs  watch.html  watch.rs
spec/: 03-attractor-spec.md  07-asupersync-migration-spec.md
