[package]
name = "forge-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
forge-agent = { path = "../forge-agent" }
forge-attractor = { path = "../forge-attractor" }
forge-llm = { path = "../forge-llm" }
forge-cxdb-runtime = { path = "../forge-cxdb-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "signal"] }
asupersync = "0.2.6"
libc = "0.2.182"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
